--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -27,6 +27,10 @@
 }
 
 .header {
+  font-family: "Monomakh", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5rem;
   padding: 2rem;
   position: absolute;
   top: 0;
@@ -58,6 +62,10 @@ a.secondary {
   bottom: 0;
   right: 0;
   padding: 2rem;
+}
+
+.heart {
+  color: hsl(0 50% 50% / 1)
 }
 
 .footer img {
